<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:placeholderText="@string/best_android_book"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="20" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/difficulty">

        <AutoCompleteTextView
            android:id="@+id/edtDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:simpleItems="@array/difficulties"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:placeholderText="@string/range_in_meters"
        app:boxBackgroundColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="4" >

        <com.google.android.material.slider.Slider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            android:stepSize="10.0"  />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:hint="@string/latitude"
            app:placeholderText="38.758354"
            app:boxBackgroundColor="@color/white" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:hint="@string/longitude"
            app:placeholderText="-9.152238"
            app:boxBackgroundColor="@color/white" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_entries"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:src="@drawable/ic_save"
            android:layout_gravity="bottom|end"
            app:tint="@color/white"/>

    </FrameLayout>

</LinearLayout>
